--- a/index.html
+++ b/index.html
@@ -905,6 +905,31 @@
   });
 </script>
 
+<!--JS for sorting portfolio projects-->
+<script>
+  const filterButtons = document.querySelectorAll("[data-filter-btn]");
+  const projectItems = document.querySelectorAll(".project-item");
+
+  filterButtons.forEach(button => {
+    button.addEventListener("click", () => {
+      const selectedCategory = button.textContent.trim();
+
+      // Remove active class from all buttons
+      filterButtons.forEach(btn => btn.classList.remove("active"));
+      button.classList.add("active");
+
+      projectItems.forEach(item => {
+        const category = item.getAttribute("data-category");
+        if (selectedCategory === "All" || category === selectedCategory) {
+          item.style.display = "block";
+        } else {
+          item.style.display = "none";
+        }
+      });
+    });
+  });
+</script>
+
 </body>
 
 </html>
