--- a/index.html
+++ b/index.html
@@ -657,14 +657,14 @@
             <li class="project-item  active" data-filter-item data-category="Clubs and Research"
                 data-title="Test Stand (NDXP)"
                 data-description="•	Spearheading the design and construction of a horizontal launch stand to safely contain engine testing while gathering data.">
-              <a href="#">
+              <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="Test Stand (NDXP)" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="Test Stand (NDXP)" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Test Stand (NDXP)</h3>
