--- a/index.html
+++ b/index.html
@@ -656,7 +656,9 @@
 
             <li class="project-item  active" data-filter-item data-category="Clubs and Research"
                 data-title="Test Stand (NDXP)"
-                data-description="•	Spearheading the design and construction of a horizontal launch stand to safely contain engine testing while gathering data.">
+                data-description="When testing a liquid rocket engine, safety is the number one concern. I am currently spearheading the design of a horizontal test stand 
+                for NDXP using Fusion360 with goals of maintaining a safe environment while being able to collect data. Working around piping connections to the injector plate and pressure 
+                transducers on the side of the engine has been the biggest challenge of the design.">
               <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
