--- a/index.html
+++ b/index.html
@@ -676,8 +676,12 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Class Projects">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Class Projects"
+              data-title="Air Quality Sensor Housing Unit"
+                data-description="Seasonal wildfires cause poor air quality around the Notre Dame Campus in the fall. 
+                To combat this issue, I worked with a team of engineers to design a housing unit for an air quality sensor, a 
+                arduino board, and a servo motor that could be placed around campus to monitor air quality in different locations.">
+              <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
