--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="AQ Sensor Unit" loading="lazy">
+                  <img src="./assets/images/project-2.JPG" alt="AQ Sensor Unit" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">AQ Sensor Unit</h3>
