--- a/index.html
+++ b/index.html
@@ -700,8 +700,15 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Class Projects">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Class Projects"
+              data-title="Bomb-Finding Robot"
+              data-description="In today's world is bomb-detection robots that are able to navigate different terrains 
+              in order to find potential hazards in war-torn areas. In a class, I was part of team tasked with solving a simulated
+              bomb location scenario in which a robot (shown in image) has to follow a line, solve a maze, and communicate a path through 
+              the maze to the bomb (simulated using a magnet). I programmed an algorithm that combined dead-end filling and Tremaux's algorithm 
+              to take in sensor data and solve the maze without any hardcoding."
+              data-image = "./assets/images/project-3.JPG">
+              <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -718,8 +725,15 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Class Projects">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Class Projects"
+              data-title="Mouse Attachment for ADLs"
+              data-description="Computers are essential to daily living. Those with impaired wrist and finger mobility due to neurological
+              disorders (such as Parkinson's) often struggle with the fine motor control using a mouse requires. To attempt a solution, I devloped 
+              an attachment for a standard computer mouse with a team on engineerings that shifts the majority of movement from the wrist and fingers to 
+              the elbow and shoulder joints. The attachment removes the need for the user to grab the mouse with their hand and allows them to 
+              simply rest their wrist on it and move the mouse around."
+              data-image = "./assets/images/project-4.JPG">
+              <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
