--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="Bomb-Finding Robot" loading="lazy">
+                  <img src="./assets/images/project-3.JPG" alt="Bomb-Finding Robot" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Bomb-Finding Robot</h3>
@@ -740,7 +740,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="Mouse Attachment for ADLs" loading="lazy">
+                  <img src="./assets/images/project-4.JPG" alt="Mouse Attachment for ADLs" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Mouse Attachment for ADLs</h3>
