--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
               bomb location scenario in which a robot (shown in image) has to follow a line, solve a maze, and communicate a path through 
               the maze to the bomb (simulated using a magnet). I programmed an algorithm that combined dead-end filling and Tremaux's algorithm 
               to take in sensor data and solve the maze without any hardcoding."
-              data-image = "./assets/images/project-3.JPG">
+              data-image = "./assets/images/project-3.jpg">
               <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
@@ -715,7 +715,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.JPG" alt="Bomb-Finding Robot" loading="lazy">
+                  <img src="./assets/images/project-3.jpg" alt="Bomb-Finding Robot" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Bomb-Finding Robot</h3>
@@ -732,7 +732,7 @@
               an attachment for a standard computer mouse with a team on engineerings that shifts the majority of movement from the wrist and fingers to 
               the elbow and shoulder joints. The attachment removes the need for the user to grab the mouse with their hand and allows them to 
               simply rest their wrist on it and move the mouse around."
-              data-image = "./assets/images/project-4.JPG">
+              data-image = "./assets/images/project-4.jpg">
               <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
@@ -740,7 +740,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.JPG" alt="Mouse Attachment for ADLs" loading="lazy">
+                  <img src="./assets/images/project-4.jpg" alt="Mouse Attachment for ADLs" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Mouse Attachment for ADLs</h3>
