--- a/index.html
+++ b/index.html
@@ -964,6 +964,15 @@
   </div>
 </div>
 
+<div id="project-modal" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8); z-index:9999; align-items:center; justify-content:center;">
+  <div style="background:white; padding:20px; max-width:600px; width:90%; height:80%; overflow-y:auto; position:relative; border-radius:10px;">
+    <button onclick="closeModal()" style="position:absolute; top:10px; right:10px;">✖</button>
+    <h3 id="modal-title"></h3>
+    <div id="modal-images"></div> <!-- This will now hold multiple images -->
+    <p id="modal-description"></p>
+  </div>
+</div>
+
 <!-- js code for portfolio descriptors-->
 <script>
   function openModal(element) {
