--- a/index.html
+++ b/index.html
@@ -959,16 +959,14 @@
   <div style="background:white; padding:20px; max-width:600px; width:90%; position:relative;">
     <button onclick="closeModal()" style="position:absolute; top:10px; right:10px;">✖</button>
     <h3 id="modal-title"></h3>
-    <div id="modal-images" style="display: flex; flex-direction: column; gap: 15px; margin: 15px 0;"></div>
-    <p id="modal-description"></p>
-  </div>
+<div id="modal-images" style="
+  display: flex;
+  overflow-x: auto;
+  gap: 15px;
+  margin: 15px 0;
+  scroll-behavior: smooth;
+">
 </div>
-
-<div id="project-modal" class="modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8); z-index:9999; align-items:center; justify-content:center;">
-  <div style="background:white; padding:20px; max-width:600px; width:90%; height:80%; overflow-y:auto; position:relative; border-radius:10px;">
-    <button onclick="closeModal()" style="position:absolute; top:10px; right:10px;">✖</button>
-    <h3 id="modal-title"></h3>
-    <div id="modal-images"></div> <!-- This will now hold multiple images -->
     <p id="modal-description"></p>
   </div>
 </div>
@@ -996,9 +994,11 @@
       const img = document.createElement("img");
       img.src = src.trim();
       img.alt = title;
-      img.style.width = "100%";
+      img.style.height = "200px";              // Consistent height
+      img.style.flex = "0 0 auto";             // Prevent shrink/grow
       img.style.borderRadius = "10px";
-      img.style.marginBottom = "15px";
+      img.style.objectFit = "cover";           // Crop to fill box nicely
+      img.style.boxShadow = "0 2px 8px rgba(0,0,0,0.15)";
       imagesContainer.appendChild(img);
     });
     modal.style.display = "flex";
