--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.jpg" alt="David Scully" width="80">
+          <img src="./assets/images/my-avatar.jpg" alt="David Scully" width="80" style = "border-radius: 12px;">
         </figure>
 
         <div class="info-content">
@@ -205,7 +205,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">At a Glance</h3>
 
           <ul class="service-list">
 
