--- a/index.html
+++ b/index.html
@@ -581,8 +581,15 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Class Projects">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Personal Projects">
+              data-title="Thrust Vector Control"
+              data-description="Thrust vector control (TVC) is a method of controling the attitude of a rocket by gimbaling its engine.
+              This in turn adds a horizontal component to the thrust vector and steers the rocket in the right direction. I spent two months
+              researching, designing, and constructing a stationary model of a TVC mount for a 29mm E16-4 solid engine. The model first takes
+              in an intial position measurement from an inerital measurement unit (IMU), and simulates the servo positions required to stabilize
+              the rocket. It then sends those servo movements to the model to demonstrate them and supplies useful data to a serial monitor."
+              data-image = "./assets/images/project-6.jpg">
+              <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -592,9 +599,9 @@
                   <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Thrust Vector Control</h3>
 
-                <p class="project-category">Class Projects</p>
+                <p class="project-category">Personal Projects</p>
 
               </a>
             </li>
