--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
               researching, designing, and constructing a stationary model of a TVC mount for a 29mm E16-4 solid engine. The model first takes
               in an intial position measurement from an inerital measurement unit (IMU), and simulates the servo positions required to stabilize
               the rocket. It then sends those servo movements to the model to demonstrate them and supplies useful data to a serial monitor."
-              data-image = "./assets/images/project-6.jpg" >
+              data-image = "./assets/images/project-6.HEIC|./assets/images/project-6a.png" >
               <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
@@ -598,7 +598,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/project-6.HEIC" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Thrust Vector Control</h3>
