--- a/index.html
+++ b/index.html
@@ -469,6 +469,31 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="Personal Projects"
+              data-title="Thrust Vector Control"
+              data-description="Thrust vector control (TVC) is a method of controling the attitude of a rocket by gimbaling its engine.
+              This in turn adds a horizontal component to the thrust vector and steers the rocket in the right direction. I spent two months
+              researching, designing, and constructing a stationary model of a TVC mount for a 29mm E16-4 solid engine. The model first takes
+              in an intial position measurement from an inerital measurement unit (IMU), and simulates the servo positions required to stabilize
+              the rocket. It then sends those servo movements to the model to demonstrate them and supplies useful data to a serial monitor."
+              data-image = "./assets/images/project-6.HEIC|./assets/images/project-6a.png" >
+              <a href="#" onclick = "openModal(this)">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Thrust Vector Control</h3>
+
+                <p class="project-category">Personal Projects</p>
+
+              </a>
+            </li>
+            
             <li class="project-item  active" data-filter-item data-category="Clubs and Research"
                 data-title="Test Stand (NDXP)"
                 data-description="When testing a liquid rocket engine, safety is the number one concern. I am currently spearheading the design of a horizontal test stand 
@@ -583,30 +608,6 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Personal Projects"
-              data-title="Thrust Vector Control"
-              data-description="Thrust vector control (TVC) is a method of controling the attitude of a rocket by gimbaling its engine.
-              This in turn adds a horizontal component to the thrust vector and steers the rocket in the right direction. I spent two months
-              researching, designing, and constructing a stationary model of a TVC mount for a 29mm E16-4 solid engine. The model first takes
-              in an intial position measurement from an inerital measurement unit (IMU), and simulates the servo positions required to stabilize
-              the rocket. It then sends those servo movements to the model to demonstrate them and supplies useful data to a serial monitor."
-              data-image = "./assets/images/project-6.HEIC|./assets/images/project-6a.png" >
-              <a href="#" onclick = "openModal(this)">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-6.HEIC" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Thrust Vector Control</h3>
-
-                <p class="project-category">Personal Projects</p>
-
-              </a>
-            </li>
 
             <li class="project-item  active" data-filter-item data-category="Class Projects">
               <a href="#">
