--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="./assets/images/icon-aerospace.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -229,7 +229,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-research.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -245,7 +245,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-embedded.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -261,7 +261,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-global.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -476,7 +476,7 @@
               researching, designing, and constructing a stationary model of a TVC mount for a 29mm E16-4 solid engine. The model first takes
               in an intial position measurement from an inerital measurement unit (IMU), and simulates the servo positions required to stabilize
               the rocket. It then sends those servo movements to the model to demonstrate them and supplies useful data to a serial monitor."
-              data-image = "./assets/images/project-6.HEIC|./assets/images/project-6a.png" >
+              data-image = "./assets/images/project-6.png|./assets/images/project-6a.png" >
               <a href="#" onclick = "openModal(this)">
 
                 <figure class="project-img">
@@ -493,7 +493,7 @@
 
               </a>
             </li>
-            
+
             <li class="project-item  active" data-filter-item data-category="Clubs and Research"
                 data-title="Test Stand (NDXP)"
                 data-description="When testing a liquid rocket engine, safety is the number one concern. I am currently spearheading the design of a horizontal test stand 
